k8s/petclinic/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-node01   # 또는 node02로 고정하고 싶으면 수정
      containers:
        - name: petclinic
          image: josohyun/spring-petclinic:1   # Jenkins가 푸시한 태그로
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
